--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width'>
-  <title>Privacy Policy</title>
+  <link rel="shortcut icon" href="Home-Work.jpg" type="image/x-icon">
+  <title>Home-Work (Privacy Policy)</title>
   <style>
     body {
       font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -15,7 +16,7 @@
 
 <body>
   <strong>Privacy Policy</strong>
-  <p>This privacy policy applies to the Labour Wise app (hereby referred to as "Application") for mobile devices that
+  <p>This privacy policy applies to the Home Work app (hereby referred to as "Application") for mobile devices that
     was created by Error4O4 (hereby referred to as "Service Provider") as a Commercial service. This service is intended
     for use "AS IS".</p><br><strong>Information Collection and Use</strong>
   <p>The Application collects information when you download and use it. This information may include information such as
